manifests/content-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: docs
  name: content
  labels:
    app: docs
    component: content
spec:
  replicas: 2
  template:
    metadata:
      name: content
      labels:
        app: docs
        component: content
    spec:
      containers:
        - image: registry.giantswarm.io/giantswarm/docs:1.1.6
          name: content
          ports:
            - containerPort: 80
              name: http
      imagePullSecrets:
        - name: registry-pull-secret
