manifests/proxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: docs
  name: proxy
  labels:
    app: docs
    component: proxy
spec:
  replicas: 2
  template:
    metadata:
      name: proxy
      labels:
        app: docs
        component: proxy
    spec:
      containers:
        - image: registry.giantswarm.io/giantswarm/docs-proxy:0.6.0
          name: proxy
          ports:
            - containerPort: 80
              name: http
      imagePullSecrets:
        - name: registry-pull-secret
